k8s/devops-demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-api
  namespace: devops-demo

spec:
  replicas: 2

  selector:
    matchLabels:
      app: demo-api

  template:
    metadata:
      labels:
        app: demo-api

    spec:
      containers:
        - name: api
          image: ghcr.io/mattraw57/k3s-demo-api:29c1eb14bba8b692b87bf3da93d7772270659b74
          ports:
            - containerPort: 3000

          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10

          resources:
            requests:
              cpu: "25m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "128Mi"
