k8s/devops-demo/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: devops-demo
spec:
  replicas: 1

  selector:
    matchLabels:
      app: redis

  template:
    metadata:
      labels:
        app: redis

    spec:
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: redis-data

      containers:
        - name: redis
          image: redis:8-alpine

          ports:
            - containerPort: 6379

          resources:
            requests:
              cpu: "10m"
              memory: "16Mi"
            limits:
              cpu: "100m"
              memory: "64Mi"
          
          volumeMounts:
             - name: redis-data
               mountPath: /data

          command:
            - sh
            - -c
            - exec redis-server --requirepass "$REDIS_PASSWORD"
