k8s/devops-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-api
  namespace: devops-demo
spec:
  selector:
    app: demo-api

  ports:
    - port: 80
      targetPort: 3000

  type: ClusterIP
